Yet more workd about qontrol

--- a/p4/qontrol.tex
+++ b/p4/qontrol.tex
@@ -278,13 +278,67 @@ InputSimple, InputLogic, ParamDouble.
 и детектора фронтов.
 
 Для реализации параметрических входов используются экземпляры класса ParamDouble.
-Отличие из поведения от сигнальных входов заключается в том,
-что при изменении параметра моделируемым элементом могут быть предприняты определённые
+Отличие их поведения от поведения сигнальных входов заключается в том,
+что при изменении значения параметра моделируемым элементом
+могут быть предприняты определённые
 действия. Если же значением параметра является константа, или же
 значение параметра зафиксировано при начале процесса моделирования,
 то получение данных происходит только в момент начала моделирования,
 что существенно уменьшает вычислительные затраты на численное моделирование.
 
+Базовым классом для всех элементов, которые могут присутствовать
+в схеме модели, является TMiso. Он дополняет
+возможности, предоставляемые своим базовым классом, LinkedObj,
+действиями, выполняемыми непосредственно в процессе
+моделирования, перед одним запуском моделирования,
+перед группой запусков моделирования, а также после
+завершения этих процессов.
+Всего у класса TMiso около 50 наследников,
+начиная от простых сумматоров, логических элементов,
+и заканчивая сложными элементами для реализации
+алгоритмов поисковых агентов.
+
+Из всех наследников TMiso следует отметить элемент TSubScheme.
+От позволяет в качестве элемента текущей схемы использовать
+другую схему. Другая схема может быть как частью модели,
+что сейчас используется, так и загружаться из библиотек схем.
+Библиотеки схем представляют собой обычные файлы моделей,
+которые содержат именованные схемы.
+
+Для получения данных из внешних источников предназначены
+два класса: TFileSource и TFileSimple.
+Оба позволяют получать данные как из файла, в том числе специального, отображающего
+операции ввода-вывода на внешнее устройство или же другой процесс операционной системы.
+Первый из них, ценой дополнительных вычислительных затрат позволяет
+проводить пере дискретизацию сигнала во временной области.
+Второй, за счёт меньших накладных расходов, является более
+подходящим при моделировании в реальном масштабе времени.
+
+Scheme [s]
+
+Outputs [s]
+
+\begin{figure}[htb!]
+  \begin{center}
+    \includegraphics[width=0.7\textwidth]{p/qontrol_3d_a.png}
+  \end{center}
+  \caption{Окно,предназначенное для отображения графиков}
+  \label{atu:f:qontrol_3d}
+\end{figure}
+
+Simulation[s];
+
+\begin{figure}[htb!]
+  \begin{center}
+    \includegraphics[width=0.7\textwidth]{p/qontrol_task.png}
+  \end{center}
+  \caption{Диалоговое окно, предназначенное для задания параметров моделирования}
+  \label{atu:f:qontrol_simul}
+\end{figure}
+
+Plots
+
+Model.
 
 
 
@@ -313,22 +367,8 @@ InputSimple, InputLogic, ParamDouble.
 
 
 
-\begin{figure}[htb!]
-  \begin{center}
-    \includegraphics[width=0.7\textwidth]{p/qontrol_task.png}
-  \end{center}
-  \caption{Диалоговое окно, предназначенное для задания параметров моделирования}
-  \label{atu:f:qontrol_simul}
-\end{figure}
 
 
-\begin{figure}[htb!]
-  \begin{center}
-    \includegraphics[width=0.7\textwidth]{p/qontrol_3d_a.png}
-  \end{center}
-  \caption{Окно,предназначенное для отображения графиков}
-  \label{atu:f:qontrol_3d}
-\end{figure}
 % }}}1
 
 \section{Основные подходы к } %  {{{1 --------------------------------------------- 
