qontrol: near to final in russian

--- a/p4/qontrol.tex
+++ b/p4/qontrol.tex
@@ -314,31 +314,113 @@ InputSimple, InputLogic, ParamDouble.
 Второй, за счёт меньших накладных расходов, является более
 подходящим при моделировании в реальном масштабе времени.
 
-Scheme [s]
+Объекты типа ``Scheme'' предназначены для объединения элементов модели,
+при этом объединены в контейнер схем ``schems'' типа ``ContScheme''.
+Гарантируется наличие как минимум одной схемы,
+у которой зарезервированное имя ``main\_s''.
+Эта схема является основной при моделировании, остальные предназначены для
+создания вложенных схем с помощью объектов типа ``TSubScheme''.
 
-Outputs [s]
+Для сбора и обработки данных при моделировании предназначены
+объекты типа ``TOutArr'', расположенные в контейнере ``outs'' типа ``ContOut''.
+Каждый из них может собирать данный с любого элемента модели,
+включая параметры модели, задач моделирования или же других таких же
+объектов. При этом можно задать скважность отбора данных,
+момент отбора и другие параметры. Также объекты этого пива могут использоваться
+как хранилища данных для различных алгоритмов, например
+статистического, регрессионного или Фурье анализа. Базовые статистические операции, такие как
+вычисления диапазона, среднего, дисперсии происходят автоматически.
+Данные могут быть экспортированы, но основное предназначение -
+служить основой для построения графиков.
+
+Для построения графиков используются объекты типа TGraph,
+расположенные в контейнере ``plots'' типа ``ContOut''.
+В каждом из них содержится объект типа ``SchemeData'',
+содержащий общую информацию о графике, такую как размер,
+цветовая палитра, правила и ограничения при построении осей координат,
+легенды и прочее.
+Данные, по которым строятся графики, определяются элементами типа
+``GraphElem''. Каждый из них задаёт источник данных,
+а также определяет, как эти данные будут использоваться:
+как данные для осей координат, двумерных или трёхмерных графиков разных типов,
+задают цвет или прозрачность.
+Одновременно могут быть созданы несколько графиков различных типов,
+но с совпадающими осями координат.
+Отображением графиков можно управлять как с помощью интерфейса пользователя,
+так и с помощью скриптов.
+
+Помимо графиков, на изображении могут быть расположены
+метки (PlotLabel) и простейшие графические примитивы (PlotFlippery),
+причем координаты и тех и других могут задаваться на основании
+любых числовых параметров модели.
+Текст меток также может определяться данными модели, при этом
+есть возможность задавать формат выводимых данных.
+Для вывода специальных математических символов, букв греческого алфавита
+используется подмножество математических команд \LaTeX-а.
+Помимо отображения на графиках, метки могут использоваться
+как часть шаблона имени файла при экспорте изображения,
+а также сохраняться в качестве мета информации файла.
+
+Для отображения графиков используется
+Mathgl ---
+кроссплатформенная библиотека для подготовки высококачественных научных иллюстраций.
+Помимо отображения графиков, соответствующие кона предоставляют
+набор простых инструментов для анализа~(рис.~\ref{atu:f:qontrol_3d}).
+
 
 \begin{figure}[htb!]
   \begin{center}
     \includegraphics[width=0.7\textwidth]{p/qontrol_3d_a.png}
   \end{center}
-  \caption{Окно,предназначенное для отображения графиков}
+  \caption{Окно, предназначенное для отображения графиков в программе ``qontrol''}
   \label{atu:f:qontrol_3d}
 \end{figure}
 
-Simulation[s];
+Параметры моделирования (симуляции) задаются объектами типа ``Simulation'',
+расположенными в контейнере ``sims'' типа ``ContSimul''.
+Всегда существует объект с именем ``sim0'',
+определяющим симуляцию по умолчанию.
+Параметры этих объектов задают тип моделирования
+(простое моделирование, одно и двух параметрическая итерация),
+полное время и шаг моделирования,
+имена вызываемых функций скриптов на различных стадиях,
+а также произвольный набор параметром, типы, имена и значения которых
+задаёт пользователь~(рис.~\ref{atu:f:qontrol_simul}).
+Модель может содержать произвольное количество стимуляций,
+но одновременно выполнятся может только одна.
 
 \begin{figure}[htb!]
   \begin{center}
     \includegraphics[width=0.7\textwidth]{p/qontrol_task.png}
   \end{center}
-  \caption{Диалоговое окно, предназначенное для задания параметров моделирования}
+  \caption{Диалоговое окно, предназначенное для задания параметров моделирования (Simulation)}
   \label{atu:f:qontrol_simul}
 \end{figure}
 
-Plots
 
-Model.
+Центральный объект, объединяющий всю иерархию модели,
+называется ``model'' и имеет тип ``TModel''.
+Помимо уже упомянутых контейнеров ``schems'', ``outs'', ``sims'', ``schems'',
+этот объект содержит свой произвольный набор параметров.
+При моделировании, параметры симуляции имеют приоритет
+над параметрами модели, что позволяет гибко управлять
+наборами параметров при проведении вычислительных экспериментов.
+
+Объект ``model'' также содержит элемент ``script'',
+который может содержать используемые в процессе моделирования
+скрипты в виде функция на языке JavaScript.
+При моделировании все объекты, участвующие
+в процессе, импортируются в текущую область видимости
+под своими именами~(рис.\ref{atu:f:qontrol_js}).
+
+
+\begin{figure}[htb!]
+  \begin{center}
+    \includegraphics[width=0.6\textwidth]{p/qontrol_js.png}
+  \end{center}
+  \caption{Пример скриптов программы ``qontrol''}
+  \label{atu:f:qontrol_js}
+\end{figure}
 
 
 
@@ -353,6 +435,12 @@ Model.
 
 Пользовательский интерфейс программы ``qontrol'' был создан с помощью
 средств, предоставляемых библиотекой Qt.
+Используется классический MDI интерфейс,
+то есть для каждой модели создаётся отдельное окно,
+отображающее структуру модели, и позволяющее ей изменять~(рис.~\ref{atu:f:qontrol_all}).
+Помимо основного окна, для каждой модели может быть открыть
+произвольное число окон отображения графиков и редактирования суб схем.
+
 
 \begin{figure}[htb!]
   \begin{center}
@@ -362,23 +450,37 @@ Model.
   \label{atu:f:qontrol_all}
 \end{figure}
 
+Центральную часть окна занимает редактор основной схемы моделей.
+После моделирования там также могут быть отображены
+произвольные данные, связанные с элементами модели.
+
+В правой части окна расположены списки объектов сбора данных,
+графиков, параметров моделирования и схем.
+Нижнюю часть окна занимает область вывода,
+в которую поступают сообщения об ошибках, замечаниях,
+а также стандартный вывод скриптов.
 
 
+Файлы моделей сохраняются в
+XML формате с суффиксом ``.qol'', что даёт возможность их редактировать за пределами программы
+как с помощью обычных текстовых редакторов, так и с использованием
+специальных средств для обработки структурированных XML документов.
 
 
-
-
+Программа может быть запущена и без графического интерфейса.
+При этом обязательно указание в командной строке
+имени модели. Дополнительно указывается имя симуляции,
+задаются параметры моделирования, и, при необходимости,
+указания о том, куда и как сохранять полученные данные и
+созданные графики.
 
 % }}}1
 
-\section{Основные подходы к } %  {{{1 --------------------------------------------- 
-
-% }}}1
 
 \section{Выводы по разделу \thechapter} %  % {{{1 ---------------------------------------------
 
 Создана программная среда ``qontrol'', предназначенная для моделирования
-нелинейных динамических систем, обладающая набором качеств,
+нелинейных динамических систем, обладает набором качеств,
 которые существенно упрощают процесс моделирования,
 создания новых систем идентификации и управления.
 К характеристикам программы следует отнести:
