Denotation, href, other fixup

--- a/denotations.tex
+++ b/denotations.tex
@@ -5,74 +5,125 @@
 \pdfbookmark[0]{Список условных обозначений}{denotationsbookmark}
 
 \begin{center}
-  \textbf{Список условных обозначений}
+\textbf{Список умовних позначень}
 \end{center}
 
 
 \begin{description}
 
-  \item[$u(t)$]  --- вход объекта и моделей, $[U]$, (стр.~\pageref{atu:d:u});
+  \item[$u(t)$]  ---
+    вхід об'єкта і моделей,
+    $[U]$, (стор.~\pageref{atu:d:u});
 
-  \item[$\mathbf{x}(t)$]  --- выход объекта и моделей, при необходимости разбивается на скалярные компоненты:
-    $x(t)$, $y(t)$, $z(t)$ \ldots, $[X]$, (стр.~\pageref{atu:d:x});
+  \item[$\mathbf{x}(t)$]  ---
+  вихід об'єкта і моделей, при необхідності розбивається на скалярні компоненти:
+    $x(t)$, $y(t)$, $z(t)$ \ldots, $[X]$, (стор.~\pageref{atu:d:x});
 
-  \item[$w(t)$]  --- ошибка измерения выходного сигнала объекта, (стр.~\pageref{atu:d:w});
+  \item[$w(t)$]  ---
+    похибка вимірювання вихідного сигналу об'єкта,
+    (стор.~\pageref{atu:d:w});
 
-  \item[$\mathcal{P}$] --- множество допустимых значений параметров (стр.~\pageref{atu:d:p_set});
+  \item[$\mathcal{P}$] ---
+    множина допустимих значень параметрів
+    (стор.~\pageref{atu:d:p_set});
 
-  \item[$N$]  --- количество моделей, (стр.~\pageref{atu:d:N});
+  \item[$N$]  ---
+    кількість моделей або агентів,
+    (стор.~\pageref{atu:d:N});
 
-  \item[$p_\mathrm{id}(t)$ ] --- текущее значение параметра, полученное в результате идентификации (стр.~\pageref{atu:d:p_id});
+  \item[$p_\mathrm{id}(t)$ ] ---
+    поточне значення параметра, отримане в результаті ідентифікації
+    (стор.~\pageref{atu:d:p_id});
 
-  \item[$q(p)$]  --- зависимость значения критерия идентификации от параметра в стационарном случае, $[Q]$;
+  \item[$q(p)$]  ---
+    залежність значення критерію ідентифікації від параметра в стаціонарному випадку,
+    $[Q]$, (стор.~\pageref{atu:d:q_p});
 
-  \item[$q_o(t)$, $q_m(t)$]  --- мгновенные значения критерия для объекта и модели соответственно, $[Q]$;
+  \item[$q_o(t)$, $q_m(t)$]  ---
+    миттєві значення критерію для об'єкта і моделі відповідно,
+    $[Q]$, (стор.~\pageref{atu:d:q_o});
 
-  \item[$p_o(t)$, $p_m(t)$, $p_{mi}(t)$]  --- значения параметра для объекта, текущей модели, модели с индексом $i$, $[P]$;
+  \item[$p_o(t)$, $p_m(t)$, $p_{mi}(t)$]  ---
+   значення параметра для об'єкта, поточної моделі, моделі з індексом
+    $i$, $[P]$, (стор.~\pageref{atu:d:p_o});
 
-  \item[$F(q_o,q_m) $]  --- функция качества идентификации, $[1]$, (стр.~\pageref{atu:d:F});
+  \item[$F(q_o,q_m) $]  ---
+    функція якості ідентифікації,
+    $[1]$, (стор.~\pageref{atu:d:F});
 
-  \item[$\Delta p$]  --- диапазон изменения параметра, $[P]$;
+  \item[$\Delta p$]  ---
+    діапазон зміни параметра,
+    $[P]$, (стор.~\pageref{atu:d:Delta_q});
 
-  \item[$\Delta q$]  --- диапазон изменения критерия качества, $[Q]$;
+  \item[$\Delta q$]  ---
+    діапазон зміни критерію якості,
+    $[Q]$, (стор.~\pageref{atu:d:Delta_q});
 
-  \item[$\beta(p) = \od{q(p)}{p}$]  --- текущий наклон $q(p)$, $[Q/P]$;
+  \item[$\beta(p) = \od{q(p)}{p}$]  ---
+    поточний нахил графіка критерію
+    $q(p)$, $[Q/P]$;
 
-  \item[$\beta_a = \frac{\Delta q}{\Delta p} $]  --- усредненный наклон критерия, задаёт соотношение масштабов по $p$ и $q$, $[Q/P]$;
+  \item[$\beta_a = \frac{\Delta q}{\Delta p} $]  ---
+    усереднений нахил критерію, задає співвідношення масштабів по
+    $p$ та $q$, $[Q/P]$;
 
-  \item[$ $]  --- x;
+  \item[$\tau_q$]  ---
+    характерний час усереднення критерію,
+    $[s]$, (стор.~\pageref{atu:d:tau_q});
 
-  \item[$\tau_q$]  --- характерное время усреднения критерия, $[s]$, (стр.~\pageref{atu:d:tau_q});
+  \item[$a_q = \frac{1}{\tau_q} $]  ---
+    характерна частота зрізу критерію, величина, зворотня до
+    $\tau_q$, $[s^{-1}]$, (стор.~\pageref{atu:d:a_q});
 
-  \item[$a_q = \frac{1}{\tau_q} $]  --- характерна частота среза критерия, величина, обратная $\tau_q$, $[s^{-1}]$, (стр.~\pageref{atu:d:a_q});
+  \item[$q_\gamma $]  ---
+    величина, яка визначає робочий діапазон функції якості,
+    $[Q]$, (стор.~\pageref{atu:d:q_gamma});
 
-  \item[$q_\gamma $]  --- величина, определяющая рабочий диапазон функции качества, $[Q]$;
+  \item[$\gamma = \frac{1}{q_\gamma} $]  ---
+    чутливість функції якості,
+    $[Q^{-1}]$, (стор.~\pageref{atu:d:gamma});
 
-  \item[$\gamma = \frac{1}{q_\gamma} $]  --- чувствительность функции качества, $[Q^{-1}]$;
+  \item[$q_\beta = \frac{q_\gamma}{\beta} $]  ---
+    робочий діапазон функції якості в просторі параметра,
+    $[P]$.
 
-  \item[$q_\beta = \frac{q_\gamma}{\beta} $]  --- рабочий диапазон функции качества в пространстве параметра, $[P]$.
+  % \item[$\frac{q_\gamma}{\Delta q} $]  ---
+  %   x;
+  %
+  % \item[$\frac{q_\gamma}{(N-1)\Delta q} $]  ---
+  %   x;
 
-  \item[$\frac{q_\gamma}{\Delta q} $]  --- x;
+  \item[$p_{e} $]  ---
+    оцінка ідентифікованого параметра одним пошуковим агентом,
+    $[P]$, (стор.~\pageref{atu:d:p_e});
 
-  \item[$\frac{q_\gamma}{(N-1)\Delta q} $]  --- x;
+  \item[$p_{eql} $]  ---
+   оцінка $ p_e $ методом з кусочно-лінійною апроксимацією $q$,
+   $[P]$, (стор.~\pageref{atu:d:p_eql});
 
-  \item[$p_{e} $]  --- оценка идентифицируемого параметра одним поисковым агентом, (стр.~\pageref{atu:d:p_e});
+  \item[$p_{eFq} $]  ---
+    оцінка $ p_e $ квадратичною апроксимацією $F$,
+    (стор.~\pageref{atu:eq:p_eFq});
 
-  \item[$p_{eql} $]  --- оценка $p_e$ методом с кусочно-линейной аппроксимацией $q$, (стр.~\pageref{atu:d:p_eql});
+  \item[$p_{eFc} $]  ---
+    оцінка $ p_e $ методом триточкового COG по $ F $,
+    (стор.~\pageref{atu:eq:p_eFc});
 
-  \item[$p_{eFq} $]  --- оценка $p_e$ квадратичной аппроксимацией $F$, (стр.~\pageref{atu:eq:p_eFq});
+  \item[$S$]  ---
+  ступінь ``впевненості'' агента в своїй оцінці $ p_e $,
+    $[1]$, (стор.~\pageref{atu:d:S});
 
-  \item[$p_{eFc} $]  --- оценка $p_e$ методом трёхточечного COG по $F$, (стр.~\pageref{atu:eq:p_eFc});
+  \item[$W$]  ---
+    worthiness агенту в при оценці $p_e$,
+    $[1]$, (стор.~\pageref{atu:d:W});
 
-  \item[$S$]  --- степень ``уверенности'' агента в собственной оценке $p_e$, (стр.~\pageref{atu:d:S});
-
-  \item[$ $]  --- x;
-
-  \item[$ $]  --- x;
-
-  \item[$ $]  --- x;
-
-  \item[$ $]  --- x;
+  % \item[$ $]  --- x;
+  %
+  % \item[$ $]  --- x;
+  %
+  % \item[$ $]  --- x;
+  %
+  % \item[$ $]  --- x;
 
 
 \end{description}
