--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -1,5 +1,6 @@
+\clearpage
 \phantomsection
-\chapter*{Введение}
+\chapter*{Вступ}
 
 \paragraph{Актуальність роботи}
 \pdfbookmark[1]{Актуальность темы}{actualitybookmark}
@@ -42,17 +43,17 @@
 ідентифікації параметрів складних технічних систем у режимі хаотичної динаміки
 є \textit{актуальним}.
 
-Синтез систем идентификации для сложных нелинейных динамических систем
-был и остаётся сложной задачей. Невозможность определения
-аналитической зависимости значений идентифицируемых параметров
-от выхода объекта делает неработоспособными большинство известных
-методов идентификации. Наибольшую сложность для идентификации
-представляют системы динамического хаоса~\cite{moon_chaotic_vibr,anisch_nonlin_eff,sprott_212}.
-Даже лучшие в своем классе, методы адаптивно-поисковой идентификации, % TODO: ref
-в чистом виде оказываются в данном случае неработоспособными.
-Успешность построения системы идентификации для хаотических
-систем определяется наличием интегрального критерия,
-учитывающего динамику системы и зависящего от идентифицируемых параметров.
+% Синтез систем идентификации для сложных нелинейных динамических систем
+% был и остаётся сложной задачей. Невозможность определения
+% аналитической зависимости значений идентифицируемых параметров
+% от выхода объекта делает неработоспособными большинство известных
+% методов идентификации. Наибольшую сложность для идентификации
+% представляют системы динамического хаоса~\cite{moon_chaotic_vibr,anisch_nonlin_eff,sprott_212}.
+% Даже лучшие в своем классе, методы адаптивно-поисковой идентификации, % TODO: ref
+% в чистом виде оказываются в данном случае неработоспособными.
+% Успешность построения системы идентификации для хаотических
+% систем определяется наличием интегрального критерия,
+% учитывающего динамику системы и зависящего от идентифицируемых параметров.
 
 \paragraph{Зв'язок роботи з науковими програмами, планами, темами.}
 \pdfbookmark[1]{Связь работы с ...}{sciencelinkbookmark}
@@ -304,6 +305,6 @@
 Структура та обсяг роботи. Дисертація складається із вступу, 7
 розділів, висновків, списку використаних джерел, додатків.
 Загальний обсяг
-роботи складає 350 сторінки тексту, 295 рисунків, дві таблиці, список
+роботи складає 304 сторінки тексту, 295 рисунків, дві таблиці, список
 використаних джерел з 155 найменувань, 3 додатка.
 
