--- a/atudiss.tex
+++ b/atudiss.tex
@@ -2,7 +2,8 @@
 \synctex=1
 %\documentclass[14pt]{dissatu}
 
-\usepackage[verbose,showframe,a4paper,tmargin=20mm,bmargin=20mm,lmargin=25mm,rmargin=20mm,headsep=4pt]{geometry}
+%\usepackage[verbose,showframe,a4paper,tmargin=20mm,bmargin=20mm,lmargin=25mm,rmargin=20mm,headsep=4pt]{geometry}
+\usepackage[verbose,a4paper,tmargin=20mm,bmargin=20mm,lmargin=25mm,rmargin=20mm,headsep=4pt]{geometry}
 \newlength\TW
 \setlength{\TW}{0.01\textwidth} % after geometry!
 
@@ -10,9 +11,33 @@
 %\usepackage[backend=biber,bibstyle=gost-numeric,language=russian,sorting=nty,movenames=false,url=false,eprint=false]{biblatex}
 \usepackage[backend=biber,bibstyle=gost-numeric,language=russian,sorting=nty,url=false,eprint=false]{biblatex}
 
+\input{defs.tex}
+
+\hypersetup{
+  breaklinks=true,
+  linktocpage=true,
+  bookmarksnumbered,
+  colorlinks=true,
+  linkcolor=black,
+  urlcolor=black,
+  citecolor=black,
+  pdfkeywords={chaotic systems,identification criterion,searching agent,searching coordinator,ensemble methods of the searching indetification.}
+}
+%  pdftitle={\thetitle},
+%  pdfauthor={\theauthor},
+% pdftitle
+%  linkcolor=blue,
+  %urlcolor=urlcolor,
+% pdfauthor
+% pdfsubject
+% pdfcreator
+% pdfproducer
+% pdfkeywords
+% pdftrapped
+\urlstyle{rm}
+
 \input{tikzsetup.tex}
 
-\input{defs.tex}
 
 \renewcommand{\Rada}{\dissRada}
 \renewcommand{\SekrRadi}{\dissSekrRadi}
