Post-initial fill of the annot

--- a/atu_annot_en_full.tex
+++ b/atu_annot_en_full.tex
@@ -34,6 +34,101 @@ for the identification systems creation, that would be workable under conditions
 dynamics. Considered a couple of physical justification for the criteria syntesys,
 both on the direct use of physical laws, and on empirical principles.
 
+The object of research is the technical systems, which in the process of their operation may enter into chaotic regimes.
+
+The subject of the study is mathematical models of processes and methods of
+ensemble identification of technical systems with chaotic dynamics.
+
+Methods of research: To solve the problems, the mathematical apparatus of the
+theory of management and identification of nonlinear systems, dynamic chaos,
+computational methods, fuzzy logic, information theory, etc. was used.
+
+The practical value of the results obtained is that the elaborated
+identification methods were used in designing, creating, adjusting the
+parameters of the test bench for vibrating and acoustic effects. Analysis of
+data results from this stand gave the opportunity to specify the necessary
+nonlinear properties of the system and a range of parameters that collectively
+provide a broadband spectrum of oscillations.
+
+The created software environment for simulation of nonlinear dynamic systems is
+used during practical work on disciplines ``Modeling of systems'', ``Modern
+control systems'' at the department of information technologies and systems of
+the National Metallurgical Academy of Ukraine.
+
+In dissertation work the criteria of identification of nonlinear dynamical
+systems, which, unlike existing ones, allow to estimate their state and chaotic
+dynamics, and also give grounds for creation of effective algorithms of
+adjustment of parameters of models of identification systems.
+
+Identification methods based on the adaptive-search paradigm are created using
+a group of search agents that interact with each other, which, unlike methods
+that use one model or pair of models, greatly increase the search speed and are
+able to adjust at a minimal time with a sharp change of parameters, and Unlike
+in-game algorithms, new methods require a much smaller number of models and
+provide certain search warranties.
+
+A new classification of systems for the identification of dynamic systems has
+been created, which, as it absorbs existing methods, allows the creation of new
+methods of identification through the combination of their constituent parts.
+
+The model of the chaotic dynamics system with the use of coupled relaxation
+generators is proposed, which differs from the existing lack of inductive
+components, low voltage operation and the possibility of controlling the
+frequency range over a wide range, which contributes to the process of
+analyzing the chaotic dynamics of a physical object, to check the adequacy of
+the mathematical model and properties of the identification system.
+
+Methods for assessing the quality of identification are improved, which, unlike
+those existing, take into account the use of a plurality of agents.
+
+Further development approaches to the adaptation of ensemble identification
+systems parameters that are suitable for using current information from the
+ensemble of synergy models and adjusting the global search parameters in a
+priori and current uncertainty conditions.
+
+The model of the Kolpitza generator is improved, which takes into account a
+large number of nonlinear effects, which provides more adequate results of the
+process of identifying its parameters by the proposed methods.
+
+It is established that in order to solve the problem of identification it is
+necessary to exist a criterion that reflects the similarity of the dynamics of
+the object and models. In cases where it is difficult to formulate a criterion
+based on strict physical principles, it makes sense to obtain the criterion of
+a criterion obtained by interrogation, based on a limited set of
+representations of integral quantities.
+The notion of integral criterion implies a kind of averaging, which corresponds
+to a certain extent with the use of low-frequency filtration.
+
+The use of identification quality functions is necessary to determine the
+achievement of the purpose of identification, obtaining the value of the
+identified parameter by the search coordinator. Some methods of work of search
+agents require values of these functions as an input signal.
+
+The basic requirements for the properties of identification quality functions
+are established, the basic methods of determination are considered.
+
+A set of identification system structures based on the interaction of search
+agents and search coordinators has been identified. The subclass of the
+identification system used in the work of the dynamics of the ensemble of
+search agents is determined.
+
+The methods of the local estimation of the value of the identified parameter
+for both search engines using the value as a criterion and the quality function
+are determined.
+
+The methods of task dynamics of search agents are determined. Methods for
+obtaining the value of the identified parameter by the search coordinator are
+determined.
+
+The classification of ensemble search systems is created, which allows a short
+and unambiguous determination of structure and dynamics, as well as the
+creation of new methods, provided that the rules of operation of the elements
+of search agents and search coordinators are defined.
+
+On simple non-dynamic test tasks, the basic properties as separate elements of
+ensemble identification systems and systems in general are studied.
+
+
 In order to improve the identification system speed,
 a structure. which consist of a variety search agents and a search coordinatoris is proposed.
 Methods for estimating the parameter of the triplet of search agents are created, both with
@@ -50,6 +145,8 @@ create new identification systems when new methods of agents and coordinators
 appear. The properties of the set of proposed methods for an artificial
 quasistationary test system are investigated. A subset of methods is selected,
 which it is expedient to use in further research.
+
+
 
 The ``qontrol'' software was created, which is intended for modeling complex
 nonlinear dynamical systems, including in the analysis of chaotic dynamics systems processes identification.
