--- a/atu_annot_ua_full.tex
+++ b/atu_annot_ua_full.tex
@@ -15,23 +15,149 @@
 Дисертація на здобутті наукового ступеня доктора технічних наук за спеціальністю
 \dissSpecId ``\dissSpecUa''. --- \institutionUa, \belongUa, \bookyear.
 
-У дисертаційній роботі запропоновано рішення науково-прикладної проблеми
-створення теоретичних та прикладних основ
+
+Робота присвячена актуальній науково-технічній проблемі
+ідентифікації параметрів складних технічних систем у режимі хаотичної динаміки.
+Нелінійні динамічні системи, розповсюджені в сучасних технологічних і
+природних процесах, можуть проявляти хаотичні властивості в своїй динаміці.
+Існуючи системи ідентифікації нелінійних динамічних об'єктів практично не
+здатні функціонувати у таких умовах.
+Проаналізовано існуючи методи ідентифікації та моделі динаміки пошуку.
+Визначено спільні риси систем ідентифікації,
+досліджено чинники, які не дозволяють використовувати їх
+для ідентифікації параметрів хаотичних систем.
+Обґрунтована необхідність створення нових систем ідентифікації.
 
 Об'єктом дослідження є 
+технічні системи, які в процесі їх функціювання можуть
+входити в хаотичні режими.
+
+Предметом дослідження є
+математичні моделі процесів та методи
+ансамблевої ідентифікації технічних систем з хаотичною динамікою.
 
 Методи дослідження:
+Для вирішення поставлених задач використовувався математичний апарат
+теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
+обчислювальних методів, нечіткої логіки, теорії інформації тощо.
 
 Практичне значення отриманих результатів полягає у тому,
+що озроблені методи ідентифікації було використано
+при проектуванні, створенні, налаштовуванні параметрів
+стенду дослідження вібраційного та акустичного впливу.
+Аналіз результатів даних з цього стенду
+дав можливість вказати необхідні нелінійні властивості системи
+та діапазон параметрів, які у сукупності
+забезпечують широкосмуговий спектр коливань.
 
-В дисертаційній роботі запропоновано
+Створене програмне середовище для моделювання нелінійних динамічних систем
+використовується при проведенні практичних робіт по дисциплінам
+``Моделювання систем'',
+``Сучасні системи управління'' на кафедрі інформаційних технологій
+і систем Національної металургійної академії України.
 
-Вдосконалено метод
+В дисертаційній роботі
+  створено критерії ідентифікації нелінійних динамічних систем,
+  які, на відміну від тих, що існують, дозволяють оцінити їх стан та
+  хаотичну динаміку, а також дають підстави для створення ефективних алгоритмів
+  настроювання параметрів моделей систем ідентифікації.
 
+Створено методи ідентифікації на підставі
+  адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
+  які взаємодіють проміж собою, які на відміну від методів, що використовують
+  одну модель або пару моделей, значно підвищують швидкість пошуку та
+  здатні за мінімальний час  перелаштовуватися при різкій зміні параметрів, а на
+  відміну від ройових алгоритмів нові методи потребують значно меншої
+  кількості моделей та забезпечують певні гарантії пошуку.
 
-Результати дисертаційної роботи впроваджено
+Створено нову класифікацію систем ідентифікації динамічних систем,
+  яка, як вбирає у себе методи, що існують, так і дозволяє
+  створювати нові методи ідентифікації за рахунок
+  комбінування їх складових частин;
 
-Ключові слова:
+Запропоновано модель системи хаотичної динаміки
+   з використанням зв'язаних релаксаційних генераторів,
+   яка відрізняється від існуючих відсутністю індуктивних компонентів,
+   працездатністю при малих напругах та можливістю
+   керування частотним діапазоном у широкому інтервалі,
+   що сприяє процесу аналізу хаотичної динаміки
+   фізичного об'єкту, перевірці адекватності математичної моделі
+   та властивостей системи ідентифікації.
+
+Вдосконалено
+  методи оцінювання якості ідентифікації,
+  які на відміну від тих, що існують,
+  враховують використання множини агентів.
+
+Набуло подальший розвиток
+  підходи до адаптації параметрів систем
+  ансамблевої ідентифікації, які придатні використовувати поточну
+  інформацію від ансамблю синергірованих моделей та коригувати глобальні
+  параметри пошуку в умовах апріорної та поточної невизначеності.
+
+Вдосконалено
+модель генератора Колпітца, яка враховує
+    більшу кількість нелінійних ефектів,
+    що забезпечує більш адекватні результати процесу
+    ідентифікації її параметрів запропонованими методами.
+
+Встновлено, що
+для вирішення завдання ідентифікації необхідно існування
+критерію, що відображає схожість динаміки об'єкта і моделей.
+    У тих випадках, коли утруднено формування критерію на
+    підставі чітких фізичних принципів, має сенс вид критерію
+    отримати перебором, заснованому на обмеженій множині уявлень
+    інтегральних величин.
+
+    Саме поняття інтегрального критерію має на увазі певний
+    вид усереднення, що в певній мірі відповідає застосуванню
+    низькочастотної фільтрації.
+
+    Застосування функцій якості ідентифікації необхідно для
+    визначення досягнення мети ідентифікації, отримання значення
+    ідентифікованого параметра координатором пошуку. Деякі методи
+    роботи пошукових агентів вимагають значень цих функцій в якості
+    вхідного сигналу.
+
+    Встановлено основні вимоги до властивостей функцій якості
+    ідентифікації, розглянуті основні способи визначення.
+
+    Визначено набір структур систем ідентифікації, заснованих на
+    взаємодії пошукових агентів і координаторів пошуку. Визначено
+    підклас системи ідентифікації, що використовують при своїй
+    роботі динаміку ансамблю пошукових агентів.
+
+    Визначено методи локальної оцінки значення ідентифікованого
+    параметра як для пошукових агентів, які використовують значення
+    як критерію, так і функції якості.
+
+    Визначено способи завдання динаміки пошукових агентів.
+    Визначено методи отримання значення ідентифікованого параметра
+    координатором пошуку.
+
+    Створена класифікація ансамблевих пошукових систем, що дозволяє
+    коротким і однозначним чином визначити структуру і динаміку,
+    а також створювати нові методи, за умови визначення правил
+    роботи елементів пошукових агентів і координаторів пошуку.
+
+    На простих не динамічних тестових завданнях вивчені базові
+    властивості як окремих елементів ансамблевих систем
+    ідентифікації, так і систем в цілому.
+
+Результати було впроваджено у рамках науково-практичного дослідження
+``Оцінка можливості заміни випробувань КА на стійкість до акустичного навантаження
+випробуваннями широкосмугової вібрації'', згідно договору \hbox{№~V-105-16-3} від 07.09.2016
+(Спеціальне конструкторсько-технологічне бюро ІТМ НАН України, м.~Дніпро),
+та при ідентифікації режиму роботи вертикально-осьової вітроустановки з H-ротором Дар'є
+з врахуванням складно-періодичної або хаотичної структури коливань лопатей
+(Інститут транспортних систем і технологій НАН України, м.~Дніпро).
+
+\textbf{Ключові слова:}
+хаотичні системи,
+критерій ідентифікації,
+пошуковий агент,
+координатор пошуку,
+ансамблеві методи пошукової ідентифікації.
 
 
 
