Add akts pics, small fixes

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -128,21 +128,25 @@
 
 \clearpage
 \phantomsection
+\vspace{-7ex}
 \chapter*{Додаток A}
 
-\vspace{-7ex}
+\vspace{-5ex}
 \begin{center}
-Акти впровадження дисертаційної роботи
+\includegraphics[width=0.98\textwidth]{sich2_akt.png}
+%Акти впровадження дисертаційної роботи
 \end{center}
 
 
 \clearpage
 \phantomsection
+\vspace{-7ex}
 \chapter*{Додаток Б}
 
-\vspace{-7ex}
+\vspace{-5ex}
 \begin{center}
-Акти впровадження дисертаційної роботи у навчаний процес
+%Акти впровадження дисертаційної роботи у навчаний процес
+\includegraphics[width=0.98\textwidth]{transmag_dovidka.png}
 \end{center}
 
 
