--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,6 +1,6 @@
 \clearpage
 \phantomsection
-\chapter*{Выводы}
+\chapter*{Висновки}
 
 
 У роботі вирішена науково-технічна проблема ідентифікації параметрів складних технічних
