--- a/denotations.tex
+++ b/denotations.tex
@@ -87,6 +87,11 @@
     робочий діапазон функції якості в просторі параметра,
     $[P]$.
 
+  \item[$ \sigma_q (\tau_q)  $]  ---
+   співвідношення між часом оцінювання $\tau_q $
+   і середньоквадратичної похибкою вимірювання критерію
+    $[Q]$, (стор.~\pageref{atu:d:sigma_q});
+
   % \item[$\frac{q_\gamma}{\Delta q} $]  ---
   %   x;
   %
