--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -80,6 +80,74 @@
 \end{itemize}
 
 
+Список використаних джерел у даному розділі наведено у повному
+списку використаних джерел під номерами
+\cite{andrianov_laser},
+\cite{andronn_id_ns_hyst},
+\cite{anisch_nonlin_eff},
+\cite{atu_apir2011},
+\cite{atu_apir2012},
+\cite{atu_apir2013},
+\cite{atu_arsirii},
+\cite{atu_asau11},
+\cite{atu_asau12},
+\cite{atu_asau14},
+\cite{atu_asau15},
+\cite{atu_asau16},
+\cite{atu_asau17},
+\cite{atu_asau20},
+\cite{atu_asau21},
+\cite{atu_asau26},
+\cite{atu_colmono2016},
+\cite{atu_ISDMCI2011},
+\cite{atu_ISDMCI2012},
+\cite{atu_ISDMCI2013},
+\cite{atu_ISDMCI2014},
+\cite{atu_ISDMCI2015},
+\cite{atu_itcs2011},
+\cite{atu_kher2014},
+\cite{atu_kher2015},
+\cite{atu_kher2015},
+\cite{atu_kher2016},
+\cite{atu_kher2016},
+\cite{atu_phd_thesis},
+\cite{atu_st67},
+\cite{atu_st75},
+\cite{atu_st85},
+\cite{baranov_chaos_vdp},
+\cite{berger_friction},
+\cite{berje_order_in_chaos},
+\cite{borcov},
+\cite{buga_chua},
+\cite{buscarino_sync_rossler},
+\cite{Chua_double_scroll},
+\cite{chulichkcov_mm_ml_dyn},
+\cite{dmitriev_gen_chaos},
+\cite{gang_chaos_on_phase_noise},
+\cite{Ginoux2012VanDP},
+\cite{horowitz},
+\cite{in_theory_mech_vibro},
+\cite{ivanov_alg_id_dyn_hyst},
+\cite{Kennedy92robustop},
+\cite{kennedy_chaos_colpitts},
+\cite{Kennedy_Chua_primer},
+\cite{koltsova_nl_dyn_chem},
+\cite{kuznetsov_dyn_chaos},
+\cite{kuznetsov_phenomen_vdp},
+\cite{landa_nonlin_vivro_waves},
+\cite{magni_new_meth},
+\cite{magni_theory_dyn_chaos},
+\cite{mai_iss_dyn_isp},
+\cite{math5040070},
+\cite{moon_chaotic_vibr},
+\cite{neimark_stoch_chaos_vibro},
+\cite{osn_dyn_prom_robot},
+\cite{puhov_ur_reaction_diffusion},
+\cite{rosalie_rossler_template},
+\cite{ROSSLER1976397},
+\cite{sprott_212},
+\cite{sprott_strange_attr},
+\cite{sys_hyst}.
 
 
 
