--- a/titul.tex
+++ b/titul.tex
@@ -2,7 +2,109 @@
 % \hyperref[titul]{Titul}
 \phantomsection
 \pdfbookmark[0]{Titul}{titulbookmark}
-\Xmaketitle
+%\Xmaketitle
+
+\begin{center}
+
+\institutionMain
+
+\belongMain
+
+\end{center}
+
+\vspace{3ex}
+
+
+\begin{flushright}
+{
+Кваліфікаційна наукова \\
+праця на правах рукопису
+}
+\end{flushright}
+
+\vspace{3ex}
+
+\begin{center}
+\dissauthorFullMain
+\end{center}
+
+\vspace{2ex}
+
+\begin{flushright}
+УДК \UDC
+\end{flushright}
+
+%\vspace{3ex}
+\vspace{\stretch{2}}
+
+\begin{center}
+{\large\bfseries\scshape ДИСЕРТАЦІЯ }
+
+\vspace{3ex}
+
+{\large\scshape \bookname}
+
+\vspace{\stretch{2}}
+
+\dissSpecId\ --- \dissSpecMain
+
+\vspace{1ex}
+
+технічні науки
+
+\vspace{3ex}
+
+Подається на здобуття наукового ступеня доктора наук
+
+\end{center}%
+
+\vspace{2ex}
+
+{
+\noindent
+\small
+Дисертація містить результати власних досліджень. Використання ідей,
+результатів і текстів інших авторів мають посилання на відповідне джерело.\\
+\_\_\_\_\_\_\_\_\_\_ А.І. Гуда
+}
+
+\vspace{3ex}
+
+\noindent
+Науковий консультант \\
+\superUa, доктор технічних наук, професор
+
+\vspace{1ex}
+
+\noindent
+{\scriptsize
+  \parbox[t]{0.47\textwidth}{%
+    \CYRC\cyre\cyrishrt\ \cyrp\cyrr\cyri\cyrm\cyrii\cyrr\cyrn\cyri\cyrk\ %
+      \cyrd\cyri\cyrs\cyre\cyrr\cyrt\cyra\cyrc\cyrii\cyrishrt\cyrn\cyro\cyryi\ \cyrr\cyro\cyrb\cyro\cyrt\cyri\ %
+      \cyrii\cyrd\cyre\cyrn\cyrt\cyri\cyrch\cyrn\cyri\cyrishrt\ \cyrz\cyra\ \cyrz\cyrm\cyrii\cyrs\cyrt\cyro\cyrm\ %
+      \cyrz\ \cyrii\cyrn\cyrsh\cyri\cyrm\cyri,\ \cyrp\cyro\cyrd\cyra\cyrn\cyri\cyrm\cyri\ %
+      \cyrd\cyro\ \cyrs\cyrp\cyre\cyrc\cyrii\cyra\cyrl\cyrii\cyrz\cyro\cyrv\cyra\cyrn\cyro\cyryi\ %
+      \cyrv\cyrch\cyre\cyrn\cyro\cyryi\ \cyrr\cyra\cyrd\cyri\ \Rada%
+  }%
+}%
+
+\vspace{1ex}%
+\noindent
+{\scriptsize
+  \CYRV\cyrch\cyre\cyrn\cyri\cyrishrt\ \cyrs\cyre\cyrk\cyrr\cyre\cyrt\cyra\cyrr\ %
+    \cyrs\cyrp\cyre\cyrc\cyrr\cyra\cyrd\cyri\ \Rada%
+    \hfill%
+    \SekrRadi%
+}
+
+\vspace{2ex}%
+
+\begin{center}
+\cityMain\ --- \bookyear
+\end{center}
+
+
+
 % \begin{center}
 % \institution
 %   {\Large Титульная страница}
