Add slides template

--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -356,7 +356,7 @@ $ R_{fb} $.
 $ \SI{5}{\kelvin} $, що дозволило уникнути зайвого ускладнення моделі.
 
 
-Слід зазначити і певну обмеження при використанні простої
+Слід зазначити і певні обмеження при використанні простої
 $ \mathrm{On}{v} $ моделі елемента, що перемикає. Для пояснення
 причини цього обмеження розглянемо ділянки вольт-амперних
 характеристик, що безпосередньо передують переключенню
@@ -923,8 +923,8 @@ $ V \Tidx{on} $.
 де: \\
 $ R_b $ --- опір в ланцюзі живлення (ідентифікований параметр), \\
 $ C_i $ --- ємності кожного з релаксаційних генераторів, \\
-$ R_{vi} $ --- опору зарядки релаксаційних генераторів, \\
-$ R_{ i} $ --- опору зарядки релаксаційних генераторів, \\
+$ R_{vi} $ --- опори зарядки релаксаційних генераторів, \\
+$ R_{ i} $ --- опори зарядки релаксаційних генераторів, \\
 $ I_{i, \mathrm{leak}} $ --- струми витоку.
 
 
